VSE: Color strips are missing content color and overlay texts are not on top #91670

Closed
opened 2021-09-24 09:26:07 +02:00 by tintwotin · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 06:41, hash: fc7beac8d6
Worked: (newest version of Blender that worked as expected)

Short description of error
Color strips are missing content color line separator and overlay texts are not on top of strips. The layout is basically broken:
{F10567580,size=full}

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 06:41, hash: `fc7beac8d6` Worked: (newest version of Blender that worked as expected) **Short description of error** Color strips are missing content color line separator and overlay texts are not on top of strips. The layout is basically broken: {[F10567580](https://archive.blender.org/developer/F10567580/image.png),size=full}
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can not reproduce this issue. I see you have some patches applied, can you double check this happens on master?

Can not reproduce this issue. I see you have some patches applied, can you double check this happens on master?

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I was able to reproduce, so will check this

I was able to reproduce, so will check this

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Hmmm now not even sure if the issue I see is the same issue, and it seems to be only with one old file I have. I can't recreate it from scratch, so still please re-check if this happens on master.

Hmmm now not even sure if the issue I see is the same issue, and it seems to be only with one old file I have. I can't recreate it from scratch, so still please re-check if this happens on master.
Author

I haven't seen it for a while, but haven't been touching the same areas of Blender. I don't know what may have caused it. An old file may be a good guess?

I haven't seen it for a while, but haven't been touching the same areas of Blender. I don't know what may have caused it. An old file may be a good guess?

Could be. Issue I saw was text placed over waveforms, so I thought this would be it, but when I added color strip it was OK and I wasn't able to recreate such file so far.

Could be. Issue I saw was text placed over waveforms, so I thought this would be it, but when I added color strip it was OK and I wasn't able to recreate such file so far.
Author

Here's a file where the overlay texts are centered:
centered_overlay_texts.blend

Here's a file where the overlay texts are centered: [centered_overlay_texts.blend](https://archive.blender.org/developer/F10723168/centered_overlay_texts.blend)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Can reproduce with provided file, now I think I know what is incorrect here, I think there must be some error in 7cb65e4581.

May be same problem as #91725.

Can reproduce with provided file, now I think I know what is incorrect here, I think there must be some error in 7cb65e45814d. May be same problem as #91725.

This issue was referenced by eadbacdbb0

This issue was referenced by eadbacdbb06ab1ea4b0c744c31959bdf2f41bc98

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-10-07 06:39:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91670
No description provided.