Fix T91670: Strip text position is incorrect

Use `sseq->timeline_overlay.flag` instead of `sseq->flag`.
Caused oversight in 7cb65e45814d.